<resources>
    <string name="app_name">Adinugrohokel4</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Nama</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Nama</string>
    <string name="error_message_email">Masukan Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registrasi Berhasil</string>
    <string name="text_not_member">Belum Ada Akun? Buat Disini</string>
    <string name="text_already_member">Sudah Terdaftar? Login</string>
    <string name="error_email_exists">Email Sudah Terpakai</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Email / Password Salah</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Adinugroho</string>
    <string name="usr">isi username</string>
    <string name="pwd">isi paswword</string>
    <string name="li">masuk</string>
    <string name="ktk">kontak</string>
    <string name="abt">about</string>
    <string name="user">daftar user</string>
    <string name="compose_email">Kirim email</string>
    <string name="sbj">subject</string>
    <string name="to">to</string>
    <string name="msg">mesage</string>
    <string name="send">send</string>
    <string name="desc1">send</string>
    <string name="P1">Adinugroho</string>
    <string name="P2">Faris lukman</string>
    <string name="Nim1">21120115140063</string>
    <string name="Nim2">21120115140079</string>
    <string name="title_activity_kontak">KontakActivity</string>
</resources>
