<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.hocruxx.adi.adinugrohokel4.MainActivity">

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="103dp"
        android:layout_height="90dp"
        android:text="@string/compose_email"
        android:background="@color/Maroon"
        android:textColor="@android:color/background_light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="38dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="99dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="34dp" />

    <Button
        android:id="@+id/kontak"
        android:layout_width="103dp"
        android:layout_height="90dp"
        android:text="@string/ktk"
        android:background="@color/Green"
        android:textColor="@android:color/background_light"
        android:onClick="process"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/about"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/user"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/about"
        android:layout_width="103dp"
        android:layout_height="0dp"
        android:text="@string/abt"
        android:background="@color/Purple"
        android:textColor="@android:color/background_light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="37dp"
        app:layout_constraintBottom_toBottomOf="@+id/sendEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sendEmail"
        android:layout_marginLeft="37dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/user"
        android:layout_width="103dp"
        android:layout_height="90dp"
        android:layout_marginStart="37dp"
        android:background="@color/yellow"
        android:text="@string/user"
        android:textColor="@android:color/background_light"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/sendEmail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.214" />
</android.support.constraint.ConstraintLayout>