<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.hocruxx.adi.adinugrohokel4.AboutActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="136dp"
        android:layout_height="155dp"
        app:srcCompat="@drawable/adi"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.105" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:text="@string/P1"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="32dp"
        android:text="@string/Nim1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="153dp"
        app:srcCompat="@drawable/faris"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:text="@string/P2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginRight="11dp"
        app:layout_constraintRight_toRightOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="115dp"
        android:layout_height="32dp"
        android:text="@string/Nim2"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.431" />


</android.support.constraint.ConstraintLayout>
